# ai-meal-planner

./: docker-compose.yml
client/: Dockerfile  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
client/src/components/: auth-page.tsx  ingredient-selector.tsx  meal-card.tsx  meal-plan-display.tsx  meal-planner.tsx  profile-page.tsx  recipe-view.tsx  shopping-list.tsx  user-input-section.tsx
client/src/components/ui/: use-toast.ts
client/src/hooks/: useApi.ts
client/src/lib/: api.ts  types.ts
server/: Dockerfile  README.md  alembic.ini  postman_collection.json  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 6150ce402cf2_add_language_field_to_user.py  add_bought_to_shopping_items.py  d4ab6afadcab_add_role_column_to_users.py  ebfea1ec6a36_initial_migration.py
server/app/: __init__.py  database.py  logging_config.py  main.py  models.py  openrouter_client.py  schemas.py  security.py
server/app/endpoints/: __init__.py  auth.py  ingredients.py  meal_plans.py  preferences.py  profile.py  recipes.py  shopping_list.py
